[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/ui/TextoGrande.png" type="Texture" id=1]
[ext_resource path="res://adventure_core/ActionLine.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/frame_image.png" type="Texture" id=3]
[ext_resource path="res://font/IMFePIsc28P_0.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/combat/hp_bar.png" type="Texture" id=5]
[ext_resource path="res://assets/combat/hp_bar_empty.png" type="Texture" id=6]
[ext_resource path="res://assets/combat/Escudo.png" type="Texture" id=7]
[ext_resource path="res://assets/combat/Ataque.png" type="Texture" id=8]
[ext_resource path="res://adventure_core/Combat.gd" type="Script" id=9]
[ext_resource path="res://assets/combat/hiena.png" type="Texture" id=10]
[ext_resource path="res://assets/gold_dices.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 114
outline_size = 5
outline_color = Color( 0.560784, 0.560784, 0.560784, 1 )
extra_spacing_top = -10
extra_spacing_bottom = -7
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 7 ), SubResource( 6 ), SubResource( 9 ), SubResource( 11 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=13]
size = 150
outline_size = 13
outline_color = Color( 0.560784, 0.560784, 0.560784, 1 )
extra_spacing_top = -10
extra_spacing_bottom = -7
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=14]
resource_name = "flash"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Combat" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -166, 860 )
script = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.137255, 0.0156863, 0.0156863, 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 21.0
texture = ExtResource( 1 )
patch_margin_left = 326
patch_margin_top = 197
patch_margin_right = 333
patch_margin_bottom = 206

[node name="Player" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -384.0
margin_top = -678.0
margin_right = 384.0

[node name="HP_PLAYER" type="TextureProgress" parent="Player"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -339.0
margin_top = -127.0
margin_right = 348.0
margin_bottom = -74.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Def" type="TextureRect" parent="Player"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 168.0
margin_top = -359.0
margin_right = 335.0
margin_bottom = -157.0
rect_pivot_offset = Vector2( 84, 101 )
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Player/Def"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 620, 634 )
custom_colors/font_color = Color( 0.054902, 0.0509804, 0.0509804, 1 )
custom_fonts/font = SubResource( 1 )
text = "12"
align = 1
valign = 1
autowrap = true

[node name="Atk" type="TextureRect" parent="Player"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 153.5
margin_top = -566.0
margin_right = 349.5
margin_bottom = -371.0
rect_pivot_offset = Vector2( 100.5, 98 )
texture = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="Player/Atk"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 620, 634 )
custom_colors/font_color = Color( 0.886275, 0.933333, 0.0431373, 1 )
custom_colors/font_outline_modulate = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_fonts/font = SubResource( 1 )
text = "+2"
align = 1
valign = 1
autowrap = true

[node name="Options" type="VBoxContainer" parent="Player"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -332.0
margin_top = -701.0
margin_right = 129.0
margin_bottom = -45.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 35
alignment = 1

[node name="Desc1" parent="Player/Options" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 461.0
margin_bottom = 207.0

[node name="Desc2" parent="Player/Options" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 242.0
margin_right = 461.0
margin_bottom = 449.0

[node name="Desc3" parent="Player/Options" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 224.0
margin_right = 461.0
margin_bottom = 431.0
rect_pivot_offset = Vector2( 354, -247 )

[node name="Enemy" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -380.5
margin_right = 380.5
margin_bottom = 685.0

[node name="Def" type="TextureRect" parent="Enemy"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 162.5
margin_top = 159.0
margin_right = 329.5
margin_bottom = 361.0
rect_pivot_offset = Vector2( 83.5, 101 )
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Enemy/Def"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 620, 634 )
custom_colors/font_color = Color( 0.054902, 0.0509804, 0.0509804, 1 )
custom_fonts/font = SubResource( 1 )
text = "12"
align = 1
valign = 1
autowrap = true

[node name="Atk" type="TextureRect" parent="Enemy"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 148.0
margin_top = 375.0
margin_right = 344.0
margin_bottom = 570.0
rect_pivot_offset = Vector2( 98, 98 )
texture = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="Enemy/Atk"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 620, 634 )
custom_colors/font_color = Color( 0.886275, 0.933333, 0.0431373, 1 )
custom_colors/font_outline_modulate = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_fonts/font = SubResource( 1 )
text = "+2"
align = 1
valign = 1
autowrap = true

[node name="Image" type="TextureRect" parent="Enemy"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -302.0
margin_top = 176.0
margin_right = 118.0
margin_bottom = 547.0
rect_min_size = Vector2( 0, 300 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 7

[node name="Frame" type="TextureRect" parent="Enemy/Image"]
modulate = Color( 0.180392, 0.176471, 0.176471, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -27.0
margin_top = -23.0
margin_right = 25.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 300 )
texture = ExtResource( 3 )
expand = true

[node name="HP_ENEM" type="TextureProgress" parent="Enemy"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -339.5
margin_top = 64.0
margin_right = 347.5
margin_bottom = 117.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="Middle" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -386.0
margin_top = -169.5
margin_right = 386.0
margin_bottom = 169.5

[node name="Line" type="ColorRect" parent="Middle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -333.5
margin_top = 9.5
margin_right = 333.5
margin_bottom = 14.5
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 0.392157 )

[node name="Dice1" type="AnimatedSprite" parent="Middle"]
position = Vector2( 182.8, 181.3 )
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 12 )

[node name="Dice2" type="AnimatedSprite" parent="Middle"]
position = Vector2( 357.8, 181.3 )
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 12 )

[node name="Label" type="Label" parent="Middle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 71.5
margin_top = -85.5
margin_right = 330.5
margin_bottom = 85.5
rect_pivot_offset = Vector2( 123.5, 90.5 )
custom_colors/font_color = Color( 0.886275, 0.933333, 0.0431373, 1 )
custom_colors/font_outline_modulate = Color( 0.184314, 0.184314, 0.184314, 1 )
custom_fonts/font = SubResource( 13 )
text = "15"
align = 1
valign = 1
autowrap = true

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="TurnLine" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.866013 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -376.0
margin_top = -612.0
margin_right = -366.0
margin_bottom = -112.0
rect_min_size = Vector2( 0, 5 )
color = Color( 1, 0.984314, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TurnLine"]
anims/flash = SubResource( 14 )
